name:                tc
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

executable tc
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    

  build-depends:       base >= 4.7
                     , array >= 0.4
                     , bound >= 1.0
                     , containers >= 0.5
                     , either >= 4.1
                     , hashable >= 1.2
                     , mtl >= 2.1
                     , prelude-extras >= 0.4
                     , pretty >= 1.1
                     , tagged >= 0.7
                     , transformers >= 0.3
                     , unordered-containers >= 0.2
                     -- , void >= 0.6

  hs-source-dirs:      ., ../dist
  default-language:    Haskell2010
  -- ghc-options:         -Wall
  ghc-options:         -Wall -prof -fprof-auto -fprof-auto-calls

  default-extensions:  DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , InstanceSigs
                     , KindSignatures
                     , MultiParamTypeClasses
                     , PatternGuards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeFamilies
                     , UnicodeSyntax
